<resources>
    <string name="app_name">BZPay Test</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Register</string>
    <string name="btn_login">Login</string>
    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>
    <string name="hint_age">Age</string>
    <string name="title_student_list">Student List</string>
    <string name="title_student_form">Student Form</string>
    <string name="title_edit_student">Edit Student</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_show_weather">Show Weather</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_weather">Weather</string>
    <string name="txt_location_weather">Please grant location permissions to get weather data</string>
    <string name="btn_enable_location">Enable Location</string>
    <string name="title_login">Login</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="hint_add_student">Press the + button to add students info</string>
</resources>